--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,17 +1,18 @@
 footer {
-    background-color: #00FF00;
+    background-color: white;
     height: 60px;
     width: 100%;
     margin-top: 100%;
+    border-top: 1px solid #CCCCCC;
 }
 
-footer .container {
+footer div {
     height: 100%;
     width: 100%;
     display: table;
 }
 
-.container p {
+footer div p {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
