--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -2,7 +2,9 @@ footer {
     background-color: white;
     height: 60px;
     width: 100%;
-    margin-top: 100%;
+
+    position: absolute;
+    bottom: 0px;
     border-top: 1px solid #CCCCCC;
 }
 
