--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,3 +1,10 @@
+body {
+   margin: 0;
+   padding: 0;
+   color: #484848;
+   font-size: 14px;
+   font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 body .container {
    max-width: 1000px;
    margin: 30px auto; /*margin top/bottom of 30px, and auto-adjust for centering both left and right margins */
