--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -21,3 +21,23 @@ section.filters button {
 section.filters button:hover {
    opacity: 90%;
 }
+section.filters div.locations {
+   height: 100%;
+   width: 25%;
+   border-right: #DDDDDD solid 1px;
+   padding-left: 50px;
+}
+section.filters div.amenities {
+   height: 100%;
+   width: 25%;
+   padding-left: 50px;
+}
+section.filters div.locations h3, section.filters div.amenities h3 {
+   font-weight: 600;
+   margin-bottom: 5px;
+}
+section.filters div.locations h4, section.filters div.amenities h4 {
+   font-weight: 400;
+   font-size: 14px;
+   margin-top: 0;
+}
